# earthquake_forecasting

./: .gitignore  DEPLOY.md  EDA.ipynb  README.md  docker-compose.yml
backend/: README.md  config.yml  pyproject.toml
backend/backend/: main.py
backend/backend/api/: encoder.py  model.py  prediction.py
backend/backend/api/cat/: train.py
backend/backend/routes/: all.py  data.py  predict.py
backend/productionModels/: one_hot.joblib
docs/catboost/: TRAINING.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/config/: config.ts
frontend/src/containers/: DataTable.tsx  NavHeader.tsx  Predictions.tsx  Row.tsx  Table.tsx  TableWrapper.tsx
frontend/src/services/: axiosTypes.ts  data.ts  predict.ts  printing.ts
frontend/src/services/__test__/: data.int.test.ts  data.test.ts  predict.int.test.ts  predict.test.ts
frontend/src/styles/: headers.scss  prediction.scss  spacing.scss  table.scss
notebooks/: EDA.ipynb  Prediction.ipynb  SHAP Values.ipynb  [CatBoost_2]_Earthquake_Damage_Forecasting.ipynb  [LightGBM]_Earthquake_Damage_Forecasting.ipynb
notes/: general.md
productionModels/: one_hot_geo.joblib
