[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Joseph Chen <jchen42703@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
tensorflow = "^2.7.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
